fix(app): Remove horizontal scrollbar on ScrollableAlertModal

--- a/app/src/components/modals/styles.css
+++ b/app/src/components/modals/styles.css
@@ -53,5 +53,6 @@
 .scrollable_modal_scroll {
   max-height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   padding-bottom: 3rem;
 }
